<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/textContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/textBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <RelativeLayout
                android:id="@+id/lyButtonOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp">

                <Button
                    android:id="@+id/btnOke"
                    android:paddingLeft="@dimen/_35sdp"
                    android:paddingRight="@dimen/_35sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/ok_label"
                    android:textStyle="bold"
                    android:textColor="@color/birugelap"
                    android:gravity="center"
                    android:background="@drawable/border_rounded_blue_transparant"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lyButtonOcr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp">

                <Button
                    android:id="@+id/btnTidak"
                    android:paddingLeft="@dimen/_35sdp"
                    android:paddingRight="@dimen/_35sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak"
                    android:textStyle="bold"
                    android:textColor="@color/birugelap"
                    android:gravity="center"
                    android:background="@drawable/border_rounded_blue_transparant"
                    />

                <Button
                    android:id="@+id/btnYa"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya"
                    android:paddingLeft="@dimen/_35sdp"
                    android:paddingRight="@dimen/_35sdp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:background="@drawable/border_rounded_blue"
                    />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
